# uncertainty_attribution_eval

./: .gitignore  README.md  calibrate_p_for_uq_mnist.py  calibrate_p_for_uq_winequality.py  evaluate_mnist.py  evaluate_mnist_dropout.py  evaluate_winequality.py  evaluate_winequality_dropconnect.py  evaluate_winequality_dropout.py  pyproject.toml
datasets/: __init__.py  mnist.py  winequality.py
notebooks/: data_collection_mnist.ipynb  data_collection_winequality.ipynb  sanity_checks_and_plots_mnist.ipynb
src/evaluation/: complexity.py  effective_complexity.py  evaluation_utils.py  feature_flipping.py  metric.py  relative_input_stability.py  relative_rank_improvement.py  repeatability.py  uncertainty_conveyance_similarity.py
src/evaluation/ood_experiment/: ood_evaluation.py  ood_generator.py
src/explainer/: explainer.py
src/models/: models.py  models_dropconnect.py  models_dropout.py  props.py
src/models/pipelines/train_pipelines/: calibration.py
src/pipelines/train_pipelines/: __init__.py
src/uncertainty_attributions/: analytical_xuq.py  empirical_xuq.py  jacobian.py  jacobian_dropconnect.py  jacobian_dropout.py  xuqgenerator.py
src/utils/: utils_data_formatter.py  xuq_utils.py
