# ---
# Poetry Dependency Management
# ---

[tool.poetry]
name = "uncertainty-attribution-evaluation"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.4"
pandas = "^2.3.1"
properscoring = "^0.1"
torch = {version = "^2.2.2", source="pytorch-cpu"}
torchvision = {version="~0.17", source="pytorch-cpu"}
scikit-learn = "^1.3.0"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
tqdm = "^4.66.2"
captum = "^0.7.0"
pre-commit = "^3.7.0"
# pandas = {extras = ["excel", "feather", "performance", "plot"], version = "^2.2.2"}
pandas-stubs = "^2.2.2"
openpyxl = "^3.1.2"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
ipympl = "^0.9.4"
statsmodels = "^0.14.2"
ipywidgets = ">=8.0"
antlr4-python3-runtime = "==4.9.3"
watermark = "^2.4.3"
ruff = "^0.5"
pytest = "^8.3.2"
interpret = "^0.6.1"
shap = "^0.45.0"
lime = "^0.2.0.1"
tensorflow = "^2.17.0"
zennit = "0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Using the cpu torch version by default
[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

# ---

[project]
requires-python = ">=3.10"

# ---
# Ruff Formatter + Linter
# ---

[tool.ruff]
# Same as Black.
line-length = 99
indent-width = 4

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "**/notebooks",
    "*.ipynb",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []


# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Use `\n` line endings for all files
line-ending = "lf"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"


# ---
# Pyright Static Type Checking
# ---

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/notebooks",
]


pythonVersion = "3.10"
pythonPlatform = "Linux"

venvPath = "."
venv = ".venv"

typeCheckingMode = "basic"

verboseOutput = true
